Validate form input, add domain exceptions and HTML error pages
- @Valid + BindingResult on appointment confirmation, prescription issue/edit,
  role changes and registration; binding models carry the constraints
  (confirmation date is a typed LocalDateTime, @Future).
- User.firstName/lastName aligned with the registration form (2..50) and
  widened in the schema (V3) so a valid form can never fail at persist.
- NotFoundException / ConflictException replace orElse(null) lookups;
  repositories return Optional; confirming a non-REQUESTED appointment is 409.
- spring.mvc.problemdetails disabled; web/GlobalExceptionHandler renders
  templates/error/{404,403,500,4xx}.html for the Thymeleaf controllers.
- Services return the affected model and expose role-aware list methods
  (all appointments / prescriptions, per doctor) for the upcoming REST API.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>