@@ -1,9 +1,9 @@
 package dev.mstefanov.hms.service.impl;
 
+import dev.mstefanov.hms.exception.NotFoundException;
 import dev.mstefanov.hms.model.Role;
 import dev.mstefanov.hms.model.User;
 import dev.mstefanov.hms.model.binding.RoleBindingModel;
-import dev.mstefanov.hms.model.service.RoleServiceModel;
 import dev.mstefanov.hms.model.service.UserServiceModel;
 import dev.mstefanov.hms.repository.UserRepository;
 import dev.mstefanov.hms.service.RoleService;
@@ -21,200 +21,142 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImpl implements UserDetailsService, UserService {
+
+    static final String ROLE_ADMIN = "ROLE_ADMIN";
+    static final String ROLE_DOCTOR = "ROLE_DOCTOR";
+    static final String ROLE_PATIENT = "ROLE_PATIENT";
 
     private final UserRepository userRepository;
     private final RoleService roleService;
     private final ModelMapper modelMapper;
     private final PasswordEncoder passwordEncoder;
 
-    public UserServiceImpl(UserRepository userRepository, RoleService roleService, ModelMapper modelMapper, PasswordEncoder passwordEncoder) {
+    public UserServiceImpl(UserRepository userRepository, RoleService roleService, ModelMapper modelMapper,
+                           PasswordEncoder passwordEncoder) {
         this.userRepository = userRepository;
         this.roleService = roleService;
         this.modelMapper = modelMapper;
         this.passwordEncoder = passwordEncoder;
     }
 
-
-    private UserDetails map(User userEntity) {
-
-        return new org.springframework.security.core.userdetails.User(
-                userEntity.getUsername(),
-                userEntity.getPassword(),
-                userEntity.
-                        getRoles().
-                        stream().
-                        map(this::map).
-                        collect(Collectors.toList())
-        );
-    }
-
-    private GrantedAuthority map(Role role) {
-        return new SimpleGrantedAuthority(role.getName());
-    }
-
-
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+        return userRepository.findByUsername(username)
+                .map(this::toUserDetails)
+                .orElseThrow(() -> new UsernameNotFoundException("User " + username + " not found!"));
+    }
 
-        Optional<User> userEntityOpt = userRepository.findByUsername(username);
-
-        return userEntityOpt.
-                map(this::map).
-                orElseThrow(() -> new UsernameNotFoundException("User " + username + " not found!"));
+    private UserDetails toUserDetails(User user) {
+        List<GrantedAuthority> authorities = user.getRoles().stream()
+                .map(role -> (GrantedAuthority) new SimpleGrantedAuthority(role.getName()))
+                .toList();
+        return org.springframework.security.core.userdetails.User.withUsername(user.getUsername())
+                .password(user.getPassword())
+                .authorities(authorities)
+                .disabled(!user.isEnabled())
+                .build();
     }
 
     @Override
     public String getGreeting(String username) {
-
-        User user = this.userRepository.findByUsername(username).orElse(null);
-        String greeting = "";
-
-        if (user != null) {
-            greeting = "Welcome " + user.getSalutation() + " " + user.getLastName();
-        }
-
-        return greeting;
+        User user = getUserByUsername(username);
+        return "Welcome " + user.getSalutation() + " " + user.getLastName();
     }
 
     @Override
+    @Transactional
     public void registerPatient(UserServiceModel userServiceModel) {
-
-        User user = this.modelMapper.map(userServiceModel, User.class);
-        user.setPassword(this.passwordEncoder.encode(userServiceModel.getPassword()));
+        User user = modelMapper.map(userServiceModel, User.class);
+        user.setPassword(passwordEncoder.encode(userServiceModel.getPassword()));
         Role rolePatient = new Role();
-        rolePatient.setName("ROLE_PATIENT");
+        rolePatient.setName(ROLE_PATIENT);
         rolePatient.setUser(user);
-        user.setRoles(List.of(rolePatient));
+        user.setRoles(new ArrayList<>(List.of(rolePatient)));
         user.setRegistrationDate(LocalDateTime.now());
         user.setEnabled(true);
-
-        this.userRepository.save(user);
+        userRepository.save(user);
     }
 
     @Override
     public boolean checkIfUsernameExists(String username) {
-
-        return this.userRepository.findByUsername(username).orElse(null) != null;
-
+        return userRepository.existsByUsername(username);
     }
 
+    /** Users holding ROLE_DOCTOR but not ROLE_ADMIN (admins never appear as bookable doctors). */
     @Override
     public List<UserServiceModel> getAllDoctors() {
+        return userRepository.findAll().stream()
+                .filter(user -> hasRole(user, ROLE_DOCTOR) && !hasRole(user, ROLE_ADMIN))
+                .map(user -> modelMapper.map(user, UserServiceModel.class))
+                .toList();
+    }
 
-        List<UserServiceModel> users = new ArrayList<>();
-
-        for (User user : this.userRepository.findAll()) {
-            for (Role role : user.getRoles()) {
-                if (role.getName().equals("ROLE_DOCTOR")) {
-                    users.add(this.modelMapper.map(user, UserServiceModel.class));
-                    break;
-                }
-            }
-        }
-
-
-        for (int i = 0; i < users.size(); i++) {
-            for (RoleServiceModel role : users.get(i).getRoles()) {
-                if (role.getName().equals("ROLE_ADMIN")) {
-                    users.remove(i);
-                    i--;
-                    break;
-                }
-            }
-
-        }
-
-        return users;
+    private static boolean hasRole(User user, String roleName) {
+        return user.getRoles().stream().anyMatch(role -> roleName.equals(role.getName()));
     }
 
     @Override
     public User getUserByUsername(String username) {
+        return userRepository.findByUsername(username)
+                .orElseThrow(() -> new NotFoundException("User '" + username + "' not found"));
+    }
 
-        return this.userRepository.findByUsername(username).orElse(null);
+    @Override
+    public User getUserById(Long id) {
+        return userRepository.findById(id)
+                .orElseThrow(() -> NotFoundException.of("User", id));
     }
 
     @Override
     public String getDoctorAppointmentsGreeting(String username) {
-
-        User user = this.userRepository.findByUsername(username).orElse(null);
-        String greeting = "";
-
-        if (user != null) {
-            greeting = user.getSalutation() + " " + user.getLastName() + "`s Appointments";
-        }
-
-        return greeting;
+        User user = getUserByUsername(username);
+        return user.getSalutation() + " " + user.getLastName() + "`s Appointments";
     }
 
     @Override
     public String getUserFullName(Long patientId) {
-
-        User user = this.userRepository.findOneById(patientId);
-
+        User user = getUserById(patientId);
         return user.getSalutation() + " " + user.getFirstName() + " " + user.getLastName();
     }
 
     @Override
-    public User getUserById(Long patientId) {
-
-        return this.userRepository.findOneById(patientId);
-    }
-
-    @Override
     public List<String> getAllUsernames() {
-
-        return this.userRepository.findAll().stream().map(User::getUsername).collect(Collectors.toList());
+        return userRepository.findAll().stream().map(User::getUsername).toList();
     }
 
     @Override
     public List<String> getUserRoles(String username) {
-
-        UserServiceModel user = this.modelMapper.map(this.userRepository.findOneByUsername(username), UserServiceModel.class);
-        List<String> roles = new ArrayList<>();
-
-        for (RoleServiceModel role : user.getRoles()) {
-            roles.add(role.getName());
-        }
-
-        return roles;
+        return getUserByUsername(username).getRoles().stream().map(Role::getName).toList();
     }
 
     @Transactional
     @Override
     public void setUserWithNewRoles(RoleBindingModel roleBindingModel) {
-
-        User user = this.userRepository.findOneByUsername(roleBindingModel.getUsername());
+        User user = getUserByUsername(roleBindingModel.getUsername());
         user.setRoles(new ArrayList<>());
+        userRepository.save(user);
 
-        this.userRepository.save(user);
         List<Role> roles = new ArrayList<>();
-
         if (roleBindingModel.isAdmin()) {
-            Role role = this.roleService.getNewRole();
-            role.setName("ROLE_ADMIN");
-            role.setUser(user);
-            roles.add(role);
+            roles.add(newRole(ROLE_ADMIN, user));
         }
         if (roleBindingModel.isPatient()) {
-            Role role = this.roleService.getNewRole();
-            role.setName("ROLE_PATIENT");
-            role.setUser(user);
-            roles.add(role);
+            roles.add(newRole(ROLE_PATIENT, user));
         }
         if (roleBindingModel.isDoctor()) {
-            Role role = this.roleService.getNewRole();
-            role.setName("ROLE_DOCTOR");
-            role.setUser(user);
-            roles.add(role);
+            roles.add(newRole(ROLE_DOCTOR, user));
         }
-
         user.setRoles(roles);
-        this.userRepository.save(user);
+        userRepository.save(user);
     }
 
+    private Role newRole(String name, User user) {
+        Role role = roleService.getNewRole();
+        role.setName(name);
+        role.setUser(user);
+        return role;
+    }
 }
